# Raspberry_IPC_Socket_TCP

./: CMakeLists.txt  Makefile  README.md
img/: sockets.drawio
include/: button_interface.h  led_interface.h
lib/: client.c  client.h  server.c  server.h  tcp_client.c  tcp_client.h  tcp_interface.h  tcp_server.c  tcp_server.h
src/: button_interface.c  button_process.c  launch_processes.c  led_interface.c  led_process.c
src/platform/pc/: button_process.c  led_process.c
src/platform/raspberry/: button_process.c  led_process.c
